# ncnn-yolov5-loongarch

./: .clang-format  .gitignore  .vscode-ctags  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README.md  build.sh  build_instructions.sh  cmake_install.cmake  loongarch64-toolchain.cmake  loongarch64-yolov5.readelf.txt  main.cpp  run.sh
images/: gen.py
include/ncnn/: platform.h
include/opencv4/opencv2/: cvconfig.h
is2ros/include/: assess.h  capability.h  core.h  kgraph.h  select.h  simulate.h  task.h  yolo.h
is2ros/src/: assess.cpp  capability.cpp  core.cpp  kgraph.cpp  select.cpp  simulate.cpp  task.cpp  test_main.cpp  yolo.cpp
lib/cmake/ncnn/: ncnn.cmake
lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
lib/pkgconfig/: ncnn.pc
